[package]
name = "sf-protos"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

[dependencies]
alloy-primitives = "=0.7.7"
ethportal-api = { git = "https://github.com/ethereum/trin.git", version = "0.2.2", tag = "v0.1.0-alpha.35" }
prost = "0.13.1"
prost-wkt = "0.6.0"
prost-wkt-types = "0.6.0"
reth-primitives = { git = "https://github.com/paradigmxyz/reth", version = "1.0.1", tag = "v1.0.1" }
serde = "1.0.196"
serde_json = "1.0.127"
thiserror = "1.0.62"
tonic = "0.12.0"
types = { git = "https://github.com/sigp/lighthouse.git", branch = "stable" }

[dev-dependencies]
hex = "0.4.3"

[build-dependencies]
prost-build = "0.13.1"
tonic-build = "0.12.0"
